--- a/app/styles/chibime.css
+++ b/app/styles/chibime.css
@@ -130,6 +130,27 @@
   left: 30%;
 }
 
+@keyframes mouthTalkCycle {
+  0%,
+  100% {
+    height: 13%;
+    width: 10%;
+    border: 0.25vmin solid rgba(0, 0, 0, 0.789);
+    border-radius: 50%;
+    background: rgb(178, 95, 95);
+  }
+  50% {
+    height: 11%;
+    width: 20%;
+    border-top: 0.25vmin solid rgba(0, 0, 0, 0.789);
+    border-right: transparent;
+    border-bottom: transparent;
+    border-left: transparent;
+    border-radius: 50%;
+    background: transparent;
+  }
+}
+
 .mouth {
   width: 20%;
   height: 11%;
@@ -141,6 +162,7 @@
   left: 50%;
   bottom: 15%;
   transform: translate(-50%, 0);
+  animation: mouthTalkCycle 1s ease-in-out 4.5 1.8s forwards;
 }
 .nose {
   width: 1%;
